--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -1,11 +1,11 @@
 <nav>
   <div>
     <ul class="float-sm-right">
-      <li><%= link_to "Reception", reception_path %></li>
-      <li><%= link_to "Work Orders", work_orders_path %></li>
-      <li><%= link_to "QC", qcs_path %></li>
-      <li><%= link_to "Library Preparation", library_preparations_path %></li>
-      <li><%= link_to "Sequencing Runs", sequencing_runs_path %></li>
+      <li><%= link_to "Reception", gridion_reception_path %></li>
+      <li><%= link_to "Work Orders", gridion_work_orders_path %></li>
+      <li><%= link_to "QC", gridion_qcs_path %></li>
+      <li><%= link_to "Library Preparation", gridion_library_preparations_path %></li>
+      <li><%= link_to "Sequencing Runs", gridion_sequencing_runs_path %></li>
     </ul>
   </div>
 </nav>
