--- a/app/views/gridion/qcs/_form.html.erb
+++ b/app/views/gridion/qcs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for work_order, url: qc_path(work_order) do |f| %>
+<%= form_for work_order, url: gridion_qc_path(work_order) do |f| %>
   <fieldset class="container">
     <legend>
       Work Order - QC: <%= work_order.name %>
