--- a/app/views/gridion/reception/index.html.erb
+++ b/app/views/gridion/reception/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    <%= form_tag reception_upload_path, method: :post do %>
+    <%= form_tag gridion_reception_upload_path, method: :post do %>
       <table class="table table-striped">
         <thead>
           <th>&nbsp;</th>
